# gogoo-panel-web

./: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
common/: CMakeLists.txt  Makefile.in  mwb-ac-list.cc  mwb-utils.cc
data/: CMakeLists.txt  Makefile.in
data/netpanel/: CMakeLists.txt  Makefile.in
netpanel/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.internet.service.in  meego-netbook-netpanel.cc  meego-panel-internet.desktop  meego-panel-internet.desktop.in
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  com.meego.UX.Shell.Panels.internet.service.in  gogoo-panel-internet.desktop.in  meego-panel-web.cc
