SET(THEME_SRCS
	panel.css 
	ac-list.png 
	fallback-page.png 
	mpl-entry-bg.png 
	mpl-entry-clear-hover.png 
	mpl-entry-clear.png 
	mpl-entry-separator.png 
	newtab-thumbnail.png 
	placeholder-bg.png 
	thumbnail_hover.png 
	thumbnail.png 
	content-pane-background.png 
	content-pane-header.png 
	o2_globe.png 
	o2_history.png 
	o2_more.png 
	o2_search.png
    )

INSTALL(FILES ${THEME_SRCS} DESTINATION ${PKG_DATADIR}/gogoo-panel-web/theme)



